# route53_ddns

./: .dockerignore  .env.example  .gitignore  .plan.md  AI_DISCLOSURE.md  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.cursor/plans/: default_github_repo_b5f29272.plan.md  phase_2_implementation_428355bb.plan.md  phase_3_implementation.plan.md  phase_3_implementation_6cccfbd3.plan.md  phase_4_ghcr_+_ui_ef1bc59d.plan.md
.github/workflows/: release-ghcr.yml
examples/: config.example.yaml  records.example.json
src/route53_ddns/: __init__.py  config.py  github_release.py  logging_config.py  main.py  notifications.py  package_meta.py  poller.py  route53_ops.py  state.py
src/route53_ddns/static/: datetime_ui.js  update_footer.js
src/route53_ddns/templates/: index.html
tests/: conftest.py  test_app.py  test_config.py  test_package_meta.py  test_poller.py  test_route53_ops.py  test_state.py  test_update_check.py
